# api_rust_mysql

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
k6/: 1_ramping_health_check_20250831_171305.html  1_ramping_health_check_20250831_171441.html  1_ramping_health_check_20250831_171617.html  1_ramping_health_check_20250908_182740.html  1_ramping_health_check_20250908_182825.html  1_ramping_health_check_20250908_182912.html  2_ramping_create_user_20250831_171754.html  2_ramping_create_user_20250831_171932.html  2_ramping_create_user_20250831_172109.html  2_ramping_create_user_20250908_183000.html  2_ramping_create_user_20250908_183047.html  2_ramping_create_user_20250908_183135.html  3_ramping_get_user_by_id_20250831_172245.html  3_ramping_get_user_by_id_20250831_172421.html  3_ramping_get_user_by_id_20250831_172557.html  3_ramping_get_user_by_id_20250908_183220.html  3_ramping_get_user_by_id_20250908_183306.html  3_ramping_get_user_by_id_20250908_183351.html  4_constant_health_check_20250831_172738.html  4_constant_health_check_20250831_172918.html  4_constant_health_check_20250831_173058.html  5_constant_create_user_20250831_173241.html  5_constant_create_user_20250831_173425.html  5_constant_create_user_20250831_173608.html  6_constant_get_user_by_id_20250831_173749.html  6_constant_get_user_by_id_20250831_173928.html  6_constant_get_user_by_id_20250831_174110.html  k6_1_ramping_health_check.js  k6_2_ramping_create_user.js  k6_3_ramping_get_user_by_id.js  k6_4_constant_health_check.js  k6_5_constant_create_user.js  (+1 more)
src/: main.rs
(+7 files in other folders)
