[package]
name = "rust-axum-mysql-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
dotenvy = "0.15"
urlencoding = "2"   # << ใหม่
anyhow = "1"        # << ใหม่
